[package]
name = "extfsm"
description="Extended Final State Machine with internal event queue and entry/exit transitions"
version = "0.5.1"
authors = ["prz@juniper.net <prz@juniper.net>"]
readme = "README.md"
keywords = [ "fsm" ]
license = "Apache-2.0"
repository = "https://github.com/przygienda/rust-extfsm.git"

[dependencies]
slog="1.5.*"
slog-term="1.5.*"
slog-atomic="0.4.*"
slog-stream="1.2.*"
dot = "0.1.*"
uuid = { version = "0.5.*", features = ["v4"] }
custom_derive = "0.1.*"
enum_derive = "0.1.*"

[features]
