[package]
name = "extfsm"
description="Extended Finite State Machine with internal event queue and entry/exit transitions"
version = "0.7.0"
authors = ["prz@juniper.net <prz@juniper.net>"]
readme = "README.md"
keywords = [ "fsm", "state", "state-machine" ]
license = "Apache-2.0"
repository = "https://github.com/przygienda/rust-extfsm.git"

[dependencies]
slog="2"
#dot = "0.1.*"
uuid = { version = "0.5.*", features = ["v4"] }
custom_derive = "0.1.*"
enum_derive = "0.1.*"
itertools = "0.7.*"
lazy_static = "*"

[dependencies.dot]
# path="/gitlab/github-dot-rust-color"
git = "https://github.com/GrahamDennis/dot-rust.git"
branch = "develop"

[dev-dependencies]
slog-term="2"
slog-atomic="2"
slog-async="2"

[features]
