[package]
name = "extfsm"
description="Extended Finite State Machine with internal event queue and entry/exit transitions"
version = "0.12.0"
authors = ["prz@juniper.net <prz@juniper.net>"]
readme = "README.md"
keywords = [ "fsm", "state", "state-machine" ]
license = "Apache-2.0"
repository = "https://github.com/przygienda/rust-extfsm.git"

[dependencies]
slog="~2.5"
uuid = { version = "~0.8", features = ["v4"] }
custom_derive = "~0.1"
enum_derive = "~0.1"
itertools = "~0.10"
lazy_static = "~1"
dot="~0.1"

[dev-dependencies]
slog-term="~2.5"
slog-atomic="~2"
slog-async="~2"

[features]
